--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <!-- responsive webdesign : 
+        before only for pc design for pc by pixels
+        make different website for mobile and pc 
 
+        now day one site work on every displays
+        computer, tv, tablet, mobile now days
+
+        responsive design demo on chrome
+        some company not make responsive design bcoz of they owns application
+        80% websites are responsive
+        with basic css you had knowledge of
+        1. view port meta tag
+        2. Media query 
+        3. video and image resonsive
+
+
+    -->
+</body>
+</html>
